<resources>
    <string name="app_name">ConnectOut</string>
    <string name="title_activity_drawer">DrawerActivity</string>
    <string name="nav_header_title">Connect Out</string>
    <string name="nav_header_subtitle">A place to live and share</string>

    <string name="menu_home">Home</string>
    <string name="menu_my_events">My events</string>
    <string name="menu_my_account">My account</string>
    <string name="menu_filters">Filters</string>
    <string name="menu_log_out">Log out</string>
    <string name="open_drawer">Opens the drawer</string>
    <string name="close_drawer">Closes the drawer</string>
    <string name="login_name">Name</string>
    <string name="login_password">Password</string>
    <string name="log_in_button">Log In</string>
    <string name="sign_in_button">Sign In</string>
    <string name="search_placeholder">Search…</string>
    <string name="greetings_text">Greetings</string>
    <string name="connect_out_logo">Connect out Logo</string>
    <string name="submit">submit</string>
    <string name="report_description"> report racism, \n hate speech \n or bad behavior</string>
    <string name="rating">Number of stars</string>
    <string name="reasons_of_the_report">Reasons of the report:</string>
    <string name="submit_report">submit report</string>
    <string name="scan">Scan</string>
    <string name="event_qr_code">event qr code</string>
    <string name="profile_qr_code">profile qr code</string>
    <string name="to_map">To Map</string>
    <string name="to_list">To List</string>
    <string name="apply_button">APPLY</string>
    <string name="rating_toggle_button">TO RATING</string>
    <string name="name_toggle_button">TO NAME</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="send">send</string>
    <string name="input">Input</string>
    <string name="complete_registration">Complete Registration</string>
    <string name="profile_edit">PROFILE EDIT</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="bio">Bio</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="other">Other</string>
    <string name="event_title">Event title</string>
    <string name="event_description">Event description</string>
    <string name="participants">Participants</string>
    <string name="join">Join</string>
    <string name="filter">Filter</string>
    <string name="map">Map</string>
    <string name="list">List</string>
    <string name="rate_this_user">RATE THIS USER</string>
    <string name="profile">PROFILE</string>
    <string name="participants_size_format">%s (%d)</string>
    <string name="title_activity_set_event_restrictions">SetEventRestrictionsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="community">Community</string>
    <string name="add_event">Add event</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="community_posts">Community posts</string>
    <string name="scan_a_qr_code">Scan a QR code</string>
    <string name="you_will_be_redirected_in_few_seconds">\nyou will be redirected in few seconds</string>
    <string name="hello">"Hello "</string>
    <string name="likes">" likes"</string>
</resources>