<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation2"
    app:startDestination="@+id/menu_home">

    <fragment
        android:id="@+id/menu_home"
        android:name="com.sdpteam.connectout.fragments.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.sdpteam.connectout.fragments.FilterFragment"
        android:label="@string/menu_filters"
        tools:layout="@layout/fragment_filter" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.sdpteam.connectout.fragments.MyEventsFragment"
        android:label="@string/menu_my_events"
        tools:layout="@layout/fragment_my_events" />
</navigation>