<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".profile.ReportProfileActivity">

    <TextView
            android:id="@+id/reportTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reasons_of_the_report"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.2" />

    <EditText
            android:id="@+id/ReportText"
            android:layout_width="320dp"
            android:layout_height="200dp"
            android:autofillHints="@string/report_description"
            android:ems="10"
            android:gravity="start|top"
            android:hint="@string/report_description"
            android:inputType="textMultiLine"
            app:layout_constraintBottom_toTopOf="@+id/submitReportButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/reportTextView" />

    <Button
            android:id="@+id/submitReportButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/submit_report"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.8" />
</androidx.constraintlayout.widget.ConstraintLayout>